--- a/package.json
+++ b/package.json
@@ -11,27 +11,45 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@sveltejs/adapter-auto": "^2.0.0",
-    "@sveltejs/kit": "^1.11.0",
-    "@types/cookie": "^0.5.1",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
-    "@web3-onboard/core": "^2.15.4",
-    "@web3-onboard/injected-wallets": "^2.8.1",
-    "eslint": "^8.35.0",
-    "eslint-config-prettier": "^8.7.0",
-    "eslint-plugin-svelte3": "^4.0.0",
-    "prettier": "^2.8.4",
-    "prettier-plugin-svelte": "^2.9.0",
-    "svelte": "^3.55.1",
-    "svelte-check": "^3.1.0",
-    "svelte-preprocess": "^5.0.1",
-    "typescript": "^4.9.5",
-    "vite": "^4.1.4"
+		"@esbuild-plugins/node-globals-polyfill": "^0.2.3",
+		"@iconify-json/ri": "^1.1.4",
+		"@poppanator/sveltekit-svg": "^2.1.2",
+		"@sveltejs/adapter-auto": "^1.0.2",
+		"@sveltejs/kit": "^1.3.7",
+		"@tailwindcss/typography": "^0.5.9",
+		"@typescript-eslint/eslint-plugin": "^5.50.0",
+		"@typescript-eslint/parser": "^5.50.0",
+		"@web3-onboard/core": "^2.14.1",
+		"@web3-onboard/injected-wallets": "^2.6.2",
+		"@web3-onboard/walletconnect": "^2.2.2",
+		"autoprefixer": "^10.4.13",
+		"daisyui": "^2.50.0",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-plugin-svelte3": "^4.0.0",
+		"ethers": "^5.7.2",
+		"postcss": "^8.4.21",
+		"prettier": "^2.8.3",
+		"prettier-plugin-svelte": "^2.9.0",
+		"prettier-plugin-tailwindcss": "^0.2.2",
+		"rollup-plugin-polyfill-node": "^0.12.0",
+		"svelte": "^3.55.1",
+		"svelte-check": "^2.10.3",
+		"svelte-ethers-store": "^2.5.9",
+		"svelte-notifications": "^0.9.98",
+		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "^3.2.4",
+		"theme-change": "^2.3.0",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"unplugin-icons": "^0.14.15",
+		"vest": "^4.6.8",
+		"vite": "^4.1.4"
   },
   "type": "module",
   "dependencies": {
+    "@web3-onboard/core": "^2.15.4",
+    "@web3-onboard/injected-wallets": "^2.8.1",
     "@web3-onboard/walletconnect": "^2.3.1",
     "buffer": "^6.0.3"
   }
