--- a/package.json
+++ b/package.json
@@ -19,13 +19,14 @@
     "@typescript-eslint/parser": "^5.54.1",
     "@web3-onboard/core": "^2.15.4",
     "@web3-onboard/injected-wallets": "^2.8.1",
+    "esbuild": "^0.17.11",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "prettier": "^2.8.4",
     "prettier-plugin-svelte": "^2.9.0",
-    "svelte": "^3.55.1",
-    "svelte-check": "^3.1.0",
+    "svelte": "^3.56.0",
+    "svelte-check": "^3.1.1",
     "svelte-preprocess": "^5.0.1",
     "typescript": "^4.9.5",
     "vite": "^4.1.4"
