--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "format": "prettier --write ."
   },
   "devDependencies": {
-    "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.11.0",
     "@types/cookie": "^0.5.1",
@@ -19,7 +18,8 @@
     "@typescript-eslint/parser": "^5.54.1",
     "@web3-onboard/core": "^2.15.4",
     "@web3-onboard/injected-wallets": "^2.8.1",
-    "esbuild": "^0.17.11",
+    "@web3-onboard/walletconnect": "^2.3.1",
+    "buffer": "^6.0.3",
     "eslint": "^8.35.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -31,9 +31,5 @@
     "typescript": "^4.9.5",
     "vite": "^4.1.4"
   },
-  "type": "module",
-  "dependencies": {
-    "@web3-onboard/walletconnect": "^2.3.1",
-    "buffer": "^6.0.3"
-  }
+  "type": "module"
 }
